# quill-sort

./: CONTRIBUTING.md  LICENSE  README.md  __init__.py  _external.py  _parallel.py  _plugins.py  pyproject.toml
.github/: CODEOWNERS  SECURITY.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  immediate-issue.md  question.md
.github/workflows/: change-authorizer.yml
quill/: __main__.py  _core.py  _profile.py  _strategies.py
